Renamed agents to legendary figures

--- a/dashboard/live.html
+++ b/dashboard/live.html
@@ -269,7 +269,7 @@
                 <div id="actionItems">
                     <div class="action-item">
                         <div class="action-header">
-                            <span class="agent-name">🐾 Courage</span>
+                            <span class="agent-name">🕯️ Nightingale</span>
                             <span class="priority priority-urgent">Urgent</span>
                         </div>
                         <div style="font-weight: 500; margin-bottom: 0.25rem;">Client asking about pricing</div>
@@ -291,7 +291,7 @@
                     
                     <div class="action-item" style="border-color: var(--accent-yellow);">
                         <div class="action-header">
-                            <span class="agent-name">🕶️ Johnny</span>
+                            <span class="agent-name">🍎 Johnny</span>
                             <span class="priority priority-high">High</span>
                         </div>
                         <div style="font-weight: 500; margin-bottom: 0.25rem;">Outreach template decision</div>
@@ -316,7 +316,7 @@
                         3 leads opened your email but didn't reply. Set up follow-up sequence?
                     </div>
                     <div style="padding: 0.75rem; background: rgba(255,255,255,0.03); border-radius: 8px;">
-                        <strong style="color: var(--accent-green);">Courage:</strong> 
+                        <strong style="color: var(--accent-green);">Nightingale:</strong> 
                         You've been working 12 days straight. Take a break today.
                     </div>
                 </div>
@@ -336,33 +336,33 @@
                         <span style="width: 8px; height: 8px; background: var(--accent-yellow); border-radius: 50%;"></span>
                     </div>
                     <div style="display: flex; align-items: center; gap: 1rem; padding: 0.75rem; border-bottom: 1px solid var(--border);">
-                        <span>🌸</span>
+                        <span>🪶</span>
                         <div style="flex: 1;">
-                            <div>Blossom</div>
+                            <div>Shakespeare</div>
                             <div style="font-size: 0.75rem; color: var(--text-muted);">Standby - awaiting research</div>
                         </div>
                         <span style="width: 8px; height: 8px; background: var(--accent-green); border-radius: 50%;"></span>
                     </div>
                     <div style="display: flex; align-items: center; gap: 1rem; padding: 0.75rem; border-bottom: 1px solid var(--border);">
-                        <span>⚔️</span>
+                        <span>🧠</span>
                         <div style="flex: 1;">
-                            <div>Samurai Jack</div>
+                            <div>Turing</div>
                             <div style="font-size: 0.75rem; color: var(--text-muted);">Building tools</div>
                         </div>
                         <span style="width: 8px; height: 8px; background: var(--accent-green); border-radius: 50%;"></span>
                     </div>
                     <div style="display: flex; align-items: center; gap: 1rem; padding: 0.75rem; border-bottom: 1px solid var(--border);">
-                        <span>🕶️</span>
+                        <span>🍎</span>
                         <div style="flex: 1;">
-                            <div>Johnny Bravo</div>
+                            <div>Jobs</div>
                             <div style="font-size: 0.75rem; color: var(--text-muted);">Prospecting leads</div>
                         </div>
                         <span style="width: 8px; height: 8px; background: var(--accent-yellow); border-radius: 50%;"></span>
                     </div>
                     <div style="display: flex; align-items: center; gap: 1rem; padding: 0.75rem;">
-                        <span>🐾</span>
+                        <span>🕯️</span>
                         <div style="flex: 1;">
-                            <div>Courage</div>
+                            <div>Nightingale</div>
                             <div style="font-size: 0.75rem; color: var(--text-muted);">Monitoring inbox</div>
                         </div>
                         <span style="width: 8px; height: 8px; background: var(--accent-green); border-radius: 50%;"></span>
