--- a/dashboard/agents.html
+++ b/dashboard/agents.html
@@ -114,13 +114,13 @@
         <!-- Agents Grid -->
         <div class="grid md:grid-cols-2 xl:grid-cols-3 gap-4">
             
-            <!-- Dexter Card -->
+            <!-- Marie Curie Card -->
             <div class="glass-card rounded-2xl p-4 md:p-5 hover:glow-cyan transition-all group">
                 <div class="flex items-start gap-4 mb-4">
-                    <div class="w-14 h-14 bg-cyan-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-cyan-500/30 shadow-lg shadow-cyan-500/20 shrink-0">🧪</div>
+                    <div class="w-14 h-14 bg-cyan-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-cyan-500/30 shadow-lg shadow-cyan-500/20 shrink-0">☢️</div>
                     <div class="flex-1 min-w-0">
                         <div class="flex items-center gap-2 mb-1">
-                            <h3 class="font-bold text-lg truncate">Dexter</h3>
+                            <h3 class="font-bold text-lg truncate">Marie Curie</h3>
                             <div class="w-2 h-2 bg-yellow-400 rounded-full animate-pulse shadow-lg shadow-yellow-400/50" title="Working"></div>
                         </div>
                         <p class="text-cyan-400 text-sm">Research & Analytics</p>
@@ -160,18 +160,18 @@
                     </div>
                 </div>
 
-                <button onclick="showToast('Task added for Dexter', '✓')" class="w-full bg-cyan-500/20 hover:bg-cyan-500/30 text-cyan-400 border border-cyan-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
+                <button onclick="showToast('Task added for Marie Curie', '✓')" class="w-full bg-cyan-500/20 hover:bg-cyan-500/30 text-cyan-400 border border-cyan-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
                     + Add Task
                 </button>
             </div>
 
-            <!-- Blossom Card -->
+            <!-- Shakespeare Card -->
             <div class="glass-card rounded-2xl p-4 md:p-5 hover:glow-pink transition-all group">
                 <div class="flex items-start gap-4 mb-4">
-                    <div class="w-14 h-14 bg-pink-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-pink-500/30 shadow-lg shadow-pink-500/20 shrink-0">🌸</div>
+                    <div class="w-14 h-14 bg-pink-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-pink-500/30 shadow-lg shadow-pink-500/20 shrink-0">🪶</div>
                     <div class="flex-1 min-w-0">
                         <div class="flex items-center gap-2 mb-1">
-                            <h3 class="font-bold text-lg truncate">Blossom</h3>
+                            <h3 class="font-bold text-lg truncate">Shakespeare</h3>
                             <div class="w-2 h-2 bg-green-400 rounded-full shadow-lg shadow-green-400/50" title="Online"></div>
                         </div>
                         <p class="text-pink-400 text-sm">Content Strategy</p>
@@ -211,18 +211,18 @@
                     </div>
                 </div>
 
-                <button onclick="showToast('Task added for Blossom', '✓')" class="w-full bg-pink-500/20 hover:bg-pink-500/30 text-pink-400 border border-pink-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
+                <button onclick="showToast('Task added for Shakespeare', '✓')" class="w-full bg-pink-500/20 hover:bg-pink-500/30 text-pink-400 border border-pink-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
                     + Add Task
                 </button>
             </div>
 
-            <!-- Samurai Jack Card -->
+            <!-- Turing Card -->
             <div class="glass-card rounded-2xl p-4 md:p-5 hover:glow-cyan transition-all group">
                 <div class="flex items-start gap-4 mb-4">
-                    <div class="w-14 h-14 bg-yellow-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-yellow-500/30 shadow-lg shadow-yellow-500/20 shrink-0">⚔️</div>
+                    <div class="w-14 h-14 bg-yellow-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-yellow-500/30 shadow-lg shadow-yellow-500/20 shrink-0">🧠</div>
                     <div class="flex-1 min-w-0">
                         <div class="flex items-center gap-2 mb-1">
-                            <h3 class="font-bold text-lg truncate">Samurai Jack</h3>
+                            <h3 class="font-bold text-lg truncate">Turing</h3>
                             <div class="w-2 h-2 bg-green-400 rounded-full shadow-lg shadow-green-400/50" title="Online"></div>
                         </div>
                         <p class="text-yellow-400 text-sm">DevOps & Engineering</p>
@@ -262,18 +262,18 @@
                     </div>
                 </div>
 
-                <button onclick="showToast('Task added for Samurai Jack', '✓')" class="w-full bg-yellow-500/20 hover:bg-yellow-500/30 text-yellow-400 border border-yellow-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
+                <button onclick="showToast('Task added for Turing', '✓')" class="w-full bg-yellow-500/20 hover:bg-yellow-500/30 text-yellow-400 border border-yellow-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
                     + Add Task
                 </button>
             </div>
 
-            <!-- Johnny Bravo Card -->
+            <!-- Jobs Card -->
             <div class="glass-card rounded-2xl p-4 md:p-5 hover:glow-pink transition-all group">
                 <div class="flex items-start gap-4 mb-4">
-                    <div class="w-14 h-14 bg-orange-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-orange-500/30 shadow-lg shadow-orange-500/20 shrink-0">🕶️</div>
+                    <div class="w-14 h-14 bg-orange-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-orange-500/30 shadow-lg shadow-orange-500/20 shrink-0">🍎</div>
                     <div class="flex-1 min-w-0">
                         <div class="flex items-center gap-2 mb-1">
-                            <h3 class="font-bold text-lg truncate">Johnny Bravo</h3>
+                            <h3 class="font-bold text-lg truncate">Jobs</h3>
                             <div class="w-2 h-2 bg-yellow-400 rounded-full animate-pulse shadow-lg shadow-yellow-400/50" title="Working"></div>
                         </div>
                         <p class="text-orange-400 text-sm">Outreach & Sales</p>
@@ -313,18 +313,18 @@
                     </div>
                 </div>
 
-                <button onclick="showToast('Task added for Johnny Bravo', '✓')" class="w-full bg-orange-500/20 hover:bg-orange-500/30 text-orange-400 border border-orange-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
+                <button onclick="showToast('Task added for Jobs', '✓')" class="w-full bg-orange-500/20 hover:bg-orange-500/30 text-orange-400 border border-orange-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
                     + Add Task
                 </button>
             </div>
 
-            <!-- Courage Card -->
+            <!-- Nightingale Card -->
             <div class="glass-card rounded-2xl p-4 md:p-5 hover:glow-purple transition-all group">
                 <div class="flex items-start gap-4 mb-4">
-                    <div class="w-14 h-14 bg-purple-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-purple-500/30 shadow-lg shadow-purple-500/20 shrink-0">🐾</div>
+                    <div class="w-14 h-14 bg-purple-500/20 rounded-2xl flex items-center justify-center text-3xl border-2 border-purple-500/30 shadow-lg shadow-purple-500/20 shrink-0">🕯️</div>
                     <div class="flex-1 min-w-0">
                         <div class="flex items-center gap-2 mb-1">
-                            <h3 class="font-bold text-lg truncate">Courage</h3>
+                            <h3 class="font-bold text-lg truncate">Nightingale</h3>
                             <div class="w-2 h-2 bg-green-400 rounded-full shadow-lg shadow-green-400/50" title="Online"></div>
                         </div>
                         <p class="text-purple-400 text-sm">Customer Success</p>
@@ -364,7 +364,7 @@
                     </div>
                 </div>
 
-                <button onclick="showToast('Task added for Courage', '✓')" class="w-full bg-purple-500/20 hover:bg-purple-500/30 text-purple-400 border border-purple-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
+                <button onclick="showToast('Task added for Nightingale', '✓')" class="w-full bg-purple-500/20 hover:bg-purple-500/30 text-purple-400 border border-purple-500/30 py-3 rounded-xl text-sm font-medium transition-all min-h-[44px]">
                     + Add Task
                 </button>
             </div>
