--- a/dashboard/chat.html
+++ b/dashboard/chat.html
@@ -101,9 +101,9 @@
                 <span class="text-xl">&larr;</span>
             </a>
             <div class="flex -space-x-2">
-                <div class="w-10 h-10 bg-cyan-500/20 rounded-full flex items-center justify-center text-lg border-2 border-[#0f0f1a]">🧪</div>
-                <div class="w-10 h-10 bg-pink-500/20 rounded-full flex items-center justify-center text-lg border-2 border-[#0f0f1a]">🌸</div>
-                <div class="w-10 h-10 bg-yellow-500/20 rounded-full flex items-center justify-center text-lg border-2 border-[#0f0f1a]">⚔️</div>
+                <div class="w-10 h-10 bg-cyan-500/20 rounded-full flex items-center justify-center text-lg border-2 border-[#0f0f1a]">☢️</div>
+                <div class="w-10 h-10 bg-pink-500/20 rounded-full flex items-center justify-center text-lg border-2 border-[#0f0f1a]">🪶</div>
+                <div class="w-10 h-10 bg-yellow-500/20 rounded-full flex items-center justify-center text-lg border-2 border-[#0f0f1a]">🧠</div>
             </div>
             <div class="flex-1 min-w-0">
                 <h1 class="font-bold text-sm md:text-base truncate">Agent Team</h1>
@@ -127,11 +127,11 @@
                         <p class="font-semibold text-cyan-400 mb-1">Mission Control</p>
                         <p>Welcome to Agent Chat! Use @mentions to message specific agents.</p>
                         <div class="flex flex-wrap gap-2 mt-2">
-                            <span class="mention cursor-pointer" onclick="addMention('@dexter')">@dexter</span>
-                            <span class="mention cursor-pointer" onclick="addMention('@blossom')">@blossom</span>
+                            <span class="mention cursor-pointer" onclick="addMention('@marie_curie')">@marie_curie</span>
+                            <span class="mention cursor-pointer" onclick="addMention('@shakespeare')">@shakespeare</span>
                             <span class="mention cursor-pointer" onclick="addMention('@jack')">@jack</span>
                             <span class="mention cursor-pointer" onclick="addMention('@johnny')">@johnny</span>
-                            <span class="mention cursor-pointer" onclick="addMention('@courage')">@courage</span>
+                            <span class="mention cursor-pointer" onclick="addMention('@nightingale')">@nightingale</span>
                         </div>
                     </div>
                     <span class="text-[10px] text-gray-500 mt-1 ml-1">9:00 AM</span>
@@ -142,7 +142,7 @@
         <!-- Typing Indicator -->
         <div id="typingIndicator" class="hidden px-4 py-2">
             <div class="flex gap-3">
-                <div id="typingAvatar" class="w-8 h-10 bg-cyan-500/20 rounded-full flex items-center justify-center text-sm shrink-0 border border-white/10">🧪</div>
+                <div id="typingAvatar" class="w-8 h-10 bg-cyan-500/20 rounded-full flex items-center justify-center text-sm shrink-0 border border-white/10">☢️</div>
                 <div class="message-agent px-4 py-3 flex items-center gap-1">
                     <span class="w-2 h-2 bg-white/50 rounded-full typing-dot"></span>
                     <span class="w-2 h-2 bg-white/50 rounded-full typing-dot"></span>
@@ -199,11 +199,11 @@
 
     <script>
         const agents = {
-            dexter: { name: 'Dexter', emoji: '🧪', color: 'bg-cyan-500/20' },
-            blossom: { name: 'Blossom', emoji: '🌸', color: 'bg-pink-500/20' },
-            jack: { name: 'Samurai Jack', emoji: '⚔️', color: 'bg-yellow-500/20' },
-            johnny: { name: 'Johnny Bravo', emoji: '🕶️', color: 'bg-orange-500/20' },
-            courage: { name: 'Courage', emoji: '🐾', color: 'bg-purple-500/20' }
+            marie_curie: { name: 'Marie Curie', emoji: '☢️', color: 'bg-cyan-500/20' },
+            shakespeare: { name: 'Shakespeare', emoji: '🪶', color: 'bg-pink-500/20' },
+            jack: { name: 'Turing', emoji: '🧠', color: 'bg-yellow-500/20' },
+            johnny: { name: 'Jobs', emoji: '🍎', color: 'bg-orange-500/20' },
+            nightingale: { name: 'Nightingale', emoji: '🕯️', color: 'bg-purple-500/20' }
         };
 
         function addMention(name) {
