--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -197,23 +197,23 @@
                     </div>
                     <div class="space-y-3">
                         <div class="flex items-center gap-4 p-3 bg-white/5 rounded-xl cursor-pointer hover:bg-white/10 transition-all">
-                            <div class="w-10 h-10 bg-cyan-500/20 rounded-xl flex items-center justify-center text-xl">🧪</div>
+                            <div class="w-10 h-10 bg-cyan-500/20 rounded-xl flex items-center justify-center text-xl">☢️</div>
                             <div class="flex-1 min-w-0">
-                                <p class="text-sm font-medium truncate"><strong>Dexter</strong> started autonomous research</p>
+                                <p class="text-sm font-medium truncate"><strong>Marie Curie</strong> started autonomous research</p>
                                 <p class="text-xs text-gray-500">2 hours ago</p>
                             </div>
                         </div>
                         <div class="flex items-center gap-4 p-3 bg-white/5 rounded-xl cursor-pointer hover:bg-white/10 transition-all">
-                            <div class="w-10 h-10 bg-pink-500/20 rounded-xl flex items-center justify-center text-xl">🌸</div>
+                            <div class="w-10 h-10 bg-pink-500/20 rounded-xl flex items-center justify-center text-xl">🪶</div>
                             <div class="flex-1 min-w-0">
-                                <p class="text-sm font-medium truncate"><strong>Blossom</strong> delivered sports content calendar</p>
+                                <p class="text-sm font-medium truncate"><strong>Shakespeare</strong> delivered sports content calendar</p>
                                 <p class="text-xs text-gray-500">3 hours ago</p>
                             </div>
                         </div>
                         <div class="flex items-center gap-4 p-3 bg-white/5 rounded-xl cursor-pointer hover:bg-white/10 transition-all">
-                            <div class="w-10 h-10 bg-yellow-500/20 rounded-xl flex items-center justify-center text-xl">⚔️</div>
+                            <div class="w-10 h-10 bg-yellow-500/20 rounded-xl flex items-center justify-center text-xl">🧠</div>
                             <div class="flex-1 min-w-0">
-                                <p class="text-sm font-medium truncate"><strong>Samurai Jack</strong> deployed heartbeat fix</p>
+                                <p class="text-sm font-medium truncate"><strong>Turing</strong> deployed heartbeat fix</p>
                                 <p class="text-xs text-gray-500">4 hours ago</p>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                     </div>
                     <div class="bg-white/5 rounded-xl p-4">
                         <div class="flex items-center gap-2 mb-3 flex-wrap">
-                            <span class="text-xs bg-purple-500/20 text-purple-400 px-2 py-1 rounded-full">🐾 Courage</span>
+                            <span class="text-xs bg-purple-500/20 text-purple-400 px-2 py-1 rounded-full">🕯️ Nightingale</span>
                             <span class="text-xs bg-pink-500/20 text-pink-400 px-2 py-1 rounded-full">Approval</span>
                             <span class="text-xs bg-red-500/20 text-red-400 px-2 py-1 rounded-full ml-auto">Urgent</span>
                         </div>
@@ -256,41 +256,41 @@
                     <h3 class="font-semibold text-lg mb-4">Agent Status</h3>
                     <div class="space-y-3">
                         <div class="flex items-center gap-3 p-2 rounded-xl hover:bg-white/5 transition-all cursor-pointer">
-                            <div class="w-10 h-10 bg-cyan-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">🧪</div>
+                            <div class="w-10 h-10 bg-cyan-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">☢️</div>
                             <div class="flex-1 min-w-0">
-                                <p class="font-medium text-sm">Dexter</p>
+                                <p class="font-medium text-sm">Marie Curie</p>
                                 <p class="text-xs text-gray-500 truncate">Researching...</p>
                             </div>
                             <div class="w-2.5 h-2.5 bg-yellow-400 rounded-full animate-pulse shadow-lg shadow-yellow-400/50"></div>
                         </div>
                         <div class="flex items-center gap-3 p-2 rounded-xl hover:bg-white/5 transition-all cursor-pointer">
-                            <div class="w-10 h-10 bg-pink-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">🌸</div>
+                            <div class="w-10 h-10 bg-pink-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">🪶</div>
                             <div class="flex-1 min-w-0">
-                                <p class="font-medium text-sm">Blossom</p>
+                                <p class="font-medium text-sm">Shakespeare</p>
                                 <p class="text-xs text-gray-500 truncate">Standby</p>
                             </div>
                             <div class="w-2.5 h-2.5 bg-green-400 rounded-full shadow-lg shadow-green-400/50"></div>
                         </div>
                         <div class="flex items-center gap-3 p-2 rounded-xl hover:bg-white/5 transition-all cursor-pointer">
-                            <div class="w-10 h-10 bg-yellow-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">⚔️</div>
+                            <div class="w-10 h-10 bg-yellow-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">🧠</div>
                             <div class="flex-1 min-w-0">
-                                <p class="font-medium text-sm">Samurai Jack</p>
+                                <p class="font-medium text-sm">Turing</p>
                                 <p class="text-xs text-gray-500 truncate">Online</p>
                             </div>
                             <div class="w-2.5 h-2.5 bg-green-400 rounded-full shadow-lg shadow-green-400/50"></div>
                         </div>
                         <div class="flex items-center gap-3 p-2 rounded-xl hover:bg-white/5 transition-all cursor-pointer">
-                            <div class="w-10 h-10 bg-orange-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">🕶️</div>
+                            <div class="w-10 h-10 bg-orange-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">🍎</div>
                             <div class="flex-1 min-w-0">
-                                <p class="font-medium text-sm">Johnny Bravo</p>
+                                <p class="font-medium text-sm">Jobs</p>
                                 <p class="text-xs text-gray-500 truncate">Working</p>
                             </div>
                             <div class="w-2.5 h-2.5 bg-yellow-400 rounded-full animate-pulse shadow-lg shadow-yellow-400/50"></div>
                         </div>
                         <div class="flex items-center gap-3 p-2 rounded-xl hover:bg-white/5 transition-all cursor-pointer">
-                            <div class="w-10 h-10 bg-purple-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">🐾</div>
+                            <div class="w-10 h-10 bg-purple-500/20 rounded-xl flex items-center justify-center text-xl border border-white/10">🕯️</div>
                             <div class="flex-1 min-w-0">
-                                <p class="font-medium text-sm">Courage</p>
+                                <p class="font-medium text-sm">Nightingale</p>
                                 <p class="text-xs text-gray-500 truncate">Online</p>
                             </div>
                             <div class="w-2.5 h-2.5 bg-green-400 rounded-full shadow-lg shadow-green-400/50"></div>
