fix: consistent mobile nav across all pages, added Content to nav

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -277,24 +277,24 @@
     <nav class="lg:hidden fixed bottom-0 left-0 right-0 glass border-t border-white/10 z-50 pb-safe">
         <div class="flex justify-around items-center h-16">
             <a href="./index.html" class="flex flex-col items-center justify-center w-full h-full text-cyan-400">
-                <span class="text-xl mb-0.5">📊</span>
-                <span class="text-[10px]">Dashboard</span>
+                <span class="text-lg mb-0.5">📊</span>
+                <span class="text-[9px]">Home</span>
             </a>
             <a href="./agents.html" class="flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-white transition-all">
-                <span class="text-xl mb-0.5">🤖</span>
-                <span class="text-[10px]">Agents</span>
+                <span class="text-lg mb-0.5">🤖</span>
+                <span class="text-[9px]">Agents</span>
             </a>
-            <a href="./tasks.html" class="flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-white transition-all">
-                <span class="text-xl mb-0.5">📋</span>
-                <span class="text-[10px]">Tasks</span>
+            <a href="./content.html" class="flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-white transition-all">
+                <span class="text-lg mb-0.5">📝</span>
+                <span class="text-[9px]">Content</span>
             </a>
             <a href="./leads.html" class="flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-white transition-all">
-                <span class="text-xl mb-0.5">👥</span>
-                <span class="text-[10px]">Leads</span>
+                <span class="text-lg mb-0.5">👥</span>
+                <span class="text-[9px]">Leads</span>
             </a>
             <a href="./chat.html" class="flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-white transition-all">
-                <span class="text-xl mb-0.5">💬</span>
-                <span class="text-[10px]">Chat</span>
+                <span class="text-lg mb-0.5">💬</span>
+                <span class="text-[9px]">Chat</span>
             </a>
         </div>
     </nav>
